--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "YouTube Binge Tracker",
     "version": "1.0",
     "description": "Track how many YouTube videos you watch.",
-    "permissions": ["tabs", "storage", "scripting"],
+    "permissions": ["tabs", "storage"],
     "host_permissions": ["https://www.youtube.com/*"],
     "content_scripts": [
       {
